# LP25

./: CMakeLists.txt  configuration.c  main.c
include/: utility.h
src/: configuration.c  file-properties.c  files-list.c  messages.c  processes.c  sync.c  utility.c
